--- a/MyScience/Begin/MyScience/MainPage.xaml
+++ b/MyScience/Begin/MyScience/MainPage.xaml
@@ -33,6 +33,19 @@
                     </ListBox.ItemTemplate>
                 </ListBox>
             </controls:PivotItem>
+            <controls:PivotItem Header="Hall of Fame">
+                <!--ContentPanel - place additional content here-->
+                <ListBox x:Name="HallOfFameBox" Margin="0,0,-12,0" ItemsSource="{Binding Items}" SelectionChanged="MainListBox_SelectionChanged">
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <StackPanel Margin="0,0,0,17" Width="432">
+                                <TextBlock Text="{Binding Path=Name}" TextWrapping="Wrap" Style="{StaticResource PhoneTextExtraLargeStyle}"/>
+                                <TextBlock Text="{Binding Path=Score}" TextWrapping="Wrap" Margin="12,-6,12,0" Style="{StaticResource PhoneTextSubtleStyle}"/>
+                            </StackPanel>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+            </controls:PivotItem>
 
             <!--Pivot item two-->
             <controls:PivotItem Header="Profile">
@@ -47,14 +60,15 @@
                             <ColumnDefinition Width="Auto"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
-                        <Image Name="userPic" Grid.Column="0" Source="Images/BillGates.jpg"  Height="189" HorizontalAlignment="Left" Stretch="Fill" VerticalAlignment="Top" />
+                        <Image Name="userPic" Grid.Column="0" Source="Images/naran.png"  Height="189" HorizontalAlignment="Left" Stretch="Fill" VerticalAlignment="Top" />
                         <Grid x:Name="UserInfoGrid" Grid.Column="1" Margin="12,0,0,0">
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="Auto"/>
                                 <RowDefinition Height="*"/>
                             </Grid.RowDefinitions>
-                            <TextBlock Name="userName" Grid.Row="0" Height="72" HorizontalAlignment="Center" Text="Bill Gates" VerticalAlignment="Top" Width="237" FontSize="32" />
-                            <TextBlock Name="dob" Grid.Row="1" Height="72" HorizontalAlignment="Center" Text="" VerticalAlignment="Top" Width="237" FontSize="32" />
+                            <TextBlock Name="userName" Height="44" HorizontalAlignment="Center" Text="" VerticalAlignment="Top" Width="253" FontSize="26" Margin="21,0,5,0" />
+                            <TextBlock Name="score" Height="44" HorizontalAlignment="Center" Text="" VerticalAlignment="Top" Width="253" FontSize="26" Margin="22,38,6,0" Grid.RowSpan="2" />
+                            <TextBlock Grid.Row="1" Height="44" HorizontalAlignment="Center" Margin="20,35,5,0" Name="scientistLevel" Text="" VerticalAlignment="Top" Width="253" FontSize="26"/>
                         </Grid>
                     </Grid>
 
@@ -63,8 +77,8 @@
                             <RowDefinition Height="Auto"/>
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
-                        <TextBlock x:Name="UserProjectsText" Grid.Row="0" Text="Active Projects" Margin="9,0,0,0" Style="{StaticResource PhoneTextExtraLargeStyle}" TextAlignment="Center" />
-                        <ListBox x:Name="ProjectListBox" Grid.Row="1" ItemsSource="{Binding Items}" SelectionChanged="ProjectListBox_SelectionChanged" Margin="0,0,0,-195" HorizontalAlignment="Left" VerticalAlignment="Bottom" Height="296" Width="446">
+                        <TextBlock x:Name="UserProjectsText" Text="Active Projects" Margin="9,28,0,73" Style="{StaticResource PhoneTextExtraLargeStyle}" TextAlignment="Center" Grid.RowSpan="2" />
+                        <ListBox x:Name="ProjectListBox" Grid.Row="1" ItemsSource="{Binding Items}" SelectionChanged="ProjectListBox_SelectionChanged" Margin="0,0,0,-195" HorizontalAlignment="Left" VerticalAlignment="Bottom" Height="246" Width="446">
                             <ListBox.ItemTemplate>
                                 <DataTemplate>
                                     <StackPanel Margin="0,0,0,17" Width="432">
