--- a/MyScience/Begin/MyScience/SignInPage.xaml
+++ b/MyScience/Begin/MyScience/SignInPage.xaml
@@ -13,8 +13,15 @@
     mc:Ignorable="d" d:DesignHeight="768" d:DesignWidth="480"
     shell:SystemTray.IsVisible="True">
 
+
+
     <!--LayoutRoot is the root grid where all page content is placed-->
-    <Grid x:Name="LayoutRoot" Background="Transparent">
+    <Grid x:Name="LayoutRoot" >
+
+        <Grid.Background>
+            <ImageBrush ImageSource="Images/sunshine3.jpg"/>
+        </Grid.Background>
+        
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
