--- a/MyScience/Begin/MyScience/MainPage.xaml
+++ b/MyScience/Begin/MyScience/MainPage.xaml
@@ -1,4 +1,4 @@
-﻿<phone:PhoneApplicationPage 
+﻿<phone:PhoneApplicationPage xmlns:toolkit="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit"  
     x:Class="MyScience.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -104,6 +104,44 @@
                     </Grid>
                 </Grid>
             </controls:PanoramaItem>
+
+            <controls:PanoramaItem Header="Your Data">
+                <ListBox x:Name="SubmissionListBox" Margin="0,0,-12,0" ItemsSource="{Binding Items}" >
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation ="Horizontal" Height="80" Width="400">
+                                <Image Source="{Binding Path=ImageName}" Width="80" Height="80"/>
+                                <StackPanel Orientation="Vertical" Height="80">
+                                <StackPanel Orientation="Horizontal" Height="40">
+                                    <TextBlock Width="100" FontSize="22" Text="Project:" Height="40"/>
+                                    <TextBlock Width="200" FontSize="22" Text="{Binding Path=ProjectName}" Height="40" />
+                                </StackPanel>
+                                <StackPanel Orientation="Horizontal" Height="40">
+                                    <TextBlock Width="100" FontSize="22" Text="Date:" Height="40"/>
+                                    <TextBlock Width="200" FontSize="22" Text="{Binding Path=Time}" Height="40"/>
+                                </StackPanel>
+                                </StackPanel>
+                            </StackPanel>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                </ListBox>
+            </controls:PanoramaItem>
+
+            <controls:PanoramaItem Header="Your Data">
+                <ItemsControl Name="PictureWall" ItemsSource="{Binding Items}">
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <Image Source="{Binding Path=ImageName}" Width="77" Height="77"/>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <toolkit:WrapPanel ItemWidth="80" ItemHeight="80"/>
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                </ItemsControl>
+            </controls:PanoramaItem>
+
         </controls:Panorama>
     </Grid>
     
