--- a/MyScience/Begin/MyScience/MainPage.xaml
+++ b/MyScience/Begin/MyScience/MainPage.xaml
@@ -73,7 +73,7 @@
                             <ColumnDefinition Width="Auto"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
-                        <Image Name="userPic" Grid.Column="0" Source="Images/naran.png"  Height="189" HorizontalAlignment="Left" Stretch="Fill" VerticalAlignment="Top" />
+                        <Image Name="userPic" Grid.Column="0" Source="Images/unknownuser.jpg"  Height="170" Width="150" HorizontalAlignment="Left" Stretch="Fill" VerticalAlignment="Top" />
                         <Grid x:Name="UserInfoGrid" Grid.Column="1" Margin="12,0,0,0">
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="Auto"/>
