got user image submission to work, but still some work left to finish up the interface

--- a/MyScience/Begin/MyScience/SignInPage.xaml
+++ b/MyScience/Begin/MyScience/SignInPage.xaml
@@ -21,7 +21,7 @@
         <Grid.Background>
             <ImageBrush ImageSource="Images/sunshine3.jpg"/>
         </Grid.Background>
-        
+
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
@@ -35,22 +35,26 @@
 
         <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Margin="12,91,12,70" Grid.RowSpan="2">
-            <Canvas Name="SignInCanvas" Margin="6,0,12,303" Height="304">
+            <Canvas Name="SignInCanvas" Margin="6,0,12,322" Height="285">
                 <!--TextBlock Canvas.Left="20" Canvas.Top="6" Height="54" Name="signInBlock" Text="Sign In Here!" Width="161" FontSize="32"/-->
                 <TextBlock Canvas.Left="6" Canvas.Top="70" Height="63" Name="userNameBlock" Text="Enter username:" Width="233" FontSize="32"/>
-                <TextBox Canvas.Left="0" Canvas.Top="140" Height="73" Name="userNameBox" Text="Naran B." Width="250" FontSize="32"/>
-                <Button Canvas.Left="272" Canvas.Top="178" Content="Verify" Height="73" Name="signInButton" Width="160" Click="signInButton_Click" FontSize="28"/>
-                <TextBlock Canvas.Left="44" Canvas.Top="252" Height="76" Name="tryAgainBlock" Text="" Width="352" FontSize="32" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+                <TextBox Canvas.Left="0" Canvas.Top="140" Height="73" Name="userNameBox" Text="Naran B." Width="250" FontSize="32" ManipulationStarted="userNameBox_ManipulationStarted" />
+                <Button Canvas.Left="272" Canvas.Top="140" Content="Verify" Height="73" Name="signInButton" Width="160" Click="signInButton_Click" FontSize="28"/>
+                <TextBlock Canvas.Left="44" Canvas.Top="203" Height="76" Name="tryAgainBlock" Text="" Width="352" FontSize="32" HorizontalAlignment="Center" VerticalAlignment="Top"/>
             </Canvas>
-            <Canvas Name="RegisterCanvas" Margin="1,310,0,23" Height="274">
+            <Canvas Name="RegisterCanvas" Margin="1,291,0,23" Height="293">
                 <!--TextBlock Canvas.Left="17" Canvas.Top="32" Height="30" Name="registerBlock" Text="Never used myScience before?" FontSize="20"/-->
-                <TextBlock Canvas.Left="11" Canvas.Top="23" Height="52" Name="registerNameBlock" Text="Register username:" FontSize="32"/>
-                <TextBox Canvas.Left="11" Canvas.Top="82" Height="73" Name="registerNameBox" Text="Username" Width="251" FontSize="32"/>
-                <Button Canvas.Left="277" Canvas.Top="155" Content="Register" Height="79" Name="registerButton" Width="172" Click="registerButton_Click" FontSize="28"/>
-                <TextBlock Canvas.Left="49" Canvas.Top="249" Height="73" Name="registerAgainBlock" Text="" Width="352" FontSize="32" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+                <TextBlock Canvas.Left="11" Canvas.Top="-3" Height="52" Name="registerNameBlock" Text="Register username:" FontSize="32"/>
+                <TextBox Canvas.Left="11" Canvas.Top="32" Height="73" Name="registerNameBox" Text="Username" Width="251" FontSize="32" ManipulationStarted="registerNameBox_ManipulationStarted" />
+                <Button Canvas.Left="271" Canvas.Top="32" Content="Register" Height="73" Name="registerButton" Width="166" Click="registerButton_Click" FontSize="28"/>
+                <Button Canvas.Left="234" Canvas.Top="97" Content="Choose Photo" Height="73" Name="choosePhotoButton" Width="209" Click="choosePhotoButton_Click" />
+                <Button Canvas.Left="234" Canvas.Top="169" Content="Take Photo" Height="75" Name="takePhotoButton" Width="209" Click="takePhotoButton_Click" />
+                <TextBlock Height="57" Name="registerAgainBlock" Text="" Width="352" FontSize="32" Canvas.Left="49" Canvas.Top="259" />
+                <Canvas Canvas.Left="49" Canvas.Top="111" Height="133" Name="canvas1" Width="149" Background="#BFFFFFFF">
+                    <Image Height="133" Name="userImage" Stretch="Fill" Width="149" />
+                </Canvas>
             </Canvas>
         </Grid>
-
     </Grid>
 
 
