--- a/MyScience/Begin/MyScience/SignInPage.xaml
+++ b/MyScience/Begin/MyScience/SignInPage.xaml
@@ -19,7 +19,7 @@
     <Grid x:Name="LayoutRoot" >
 
         <Grid.Background>
-            <ImageBrush ImageSource="Images/sunshine3.jpg"/>
+            <ImageBrush ImageSource="Images/myScienceOrange2.png"/>
         </Grid.Background>
 
         <Grid.RowDefinitions>
@@ -28,31 +28,31 @@
         </Grid.RowDefinitions>
 
         <!--TitlePanel contains the name of the application and page title-->
-        <StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,17,0,28">
-            <TextBlock x:Name="ApplicationTitle" Text="myScience" Style="{StaticResource PhoneTextNormalStyle}"/>
-            <TextBlock x:Name="PageTitle" Text="Sign In" Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
-        </StackPanel>
+        <!--StackPanel x:Name="TitlePanel" Grid.Row="0" Margin="12,17,0,28">
+            <TextBlock x:Name="ApplicationTitle" Text=" " Style="{StaticResource PhoneTextNormalStyle}"/>
+            <TextBlock x:Name="PageTitle" Text=" " Margin="9,-7,0,0" Style="{StaticResource PhoneTextTitle1Style}"/>
+        </StackPanel-->
 
         <!--ContentPanel - place additional content here-->
         <Grid x:Name="ContentPanel" Margin="12,91,12,70" Grid.RowSpan="2">
-            <Canvas Name="SignInCanvas" Margin="6,0,12,322" Height="285">
+            <Canvas Name="SignInCanvas" Margin="6,0,12,354">
                 <!--TextBlock Canvas.Left="20" Canvas.Top="6" Height="54" Name="signInBlock" Text="Sign In Here!" Width="161" FontSize="32"/-->
-                <TextBlock Canvas.Left="6" Canvas.Top="70" Height="63" Name="userNameBlock" Text="Enter username:" Width="233" FontSize="32"/>
-                <TextBox Canvas.Left="0" Canvas.Top="131" Height="78" Name="userNameBox" Text="Lu Li" Width="250" FontSize="32" VerticalAlignment="Center" ManipulationStarted="userNameBox_ManipulationStarted"/>
-                <Button Canvas.Left="266" Canvas.Top="131" Content="Verify" Height="78" VerticalAlignment="Center" Name="signInButton" Width="160" Click="signInButton_Click" FontSize="28"/>
-                <TextBlock Canvas.Left="44" Canvas.Top="203" Height="76" Name="tryAgainBlock" Text="" Width="352" FontSize="32" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+                <TextBlock Canvas.Left="8" Canvas.Top="8" Height="43" Name="userNameBlock" Text="username:" Width="233" FontSize="26.667" Foreground="{StaticResource PhoneContrastForegroundBrush}"/>
+                <TextBox Canvas.Left="0" Canvas.Top="39" Height="78" Name="userNameBox" Text="Lu Li" Width="430" FontSize="32" ManipulationStarted="userNameBox_ManipulationStarted" Foreground="{StaticResource PhoneContrastForegroundBrush}" BorderBrush="{StaticResource PhoneContrastForegroundBrush}"/>
+                <Button Canvas.Top="117" Content="login" Height="78" Name="signInButton" Width="180" Click="signInButton_Click" FontSize="28" Foreground="{StaticResource PhoneContrastForegroundBrush}" BorderBrush="{StaticResource PhoneContrastForegroundBrush}" Background="{x:Null}" Canvas.Left="250"/>
+                <TextBlock Canvas.Left="48" Canvas.Top="191" Height="54" Name="tryAgainBlock" Text="" Width="352" FontSize="32" VerticalAlignment="Top" Foreground="{StaticResource PhoneContrastForegroundBrush}"/>
             </Canvas>
-            <Canvas Name="RegisterCanvas" Margin="1,291,0,23" Height="293">
+            <Canvas Name="RegisterCanvas" Margin="1,257,0,57" Height="293">
                 <!--TextBlock Canvas.Left="17" Canvas.Top="32" Height="30" Name="registerBlock" Text="Never used myScience before?" FontSize="20"/-->
-                <TextBlock Canvas.Left="11" Canvas.Top="-3" Height="52" Name="registerNameBlock" Text="Register username:" FontSize="32"/>
-                <TextBox Canvas.Left="6" Canvas.Top="27" Height="78" Name="registerNameBox" Text="Username" VerticalAlignment="Center" Width="251" FontSize="32" ManipulationStarted="registerNameBox_ManipulationStarted" />
-                <Button Canvas.Left="271" Canvas.Top="32" Content="Register" Height="78" Name="registerButton" VerticalAlignment="Center" Width="178" Click="registerButton_Click" FontSize="28"/>
-                <Button Canvas.Left="234" Canvas.Top="97" Content="Choose Photo" Height="78" Name="choosePhotoButton" VerticalAlignment="Center" Width="215" Click="choosePhotoButton_Click" />
-                <Button Canvas.Left="234" Canvas.Top="169" Content="Take Photo" Height="78" Name="takePhotoButton" VerticalAlignment="Center" Width="215" Click="takePhotoButton_Click" />
-                <TextBlock Height="57" Name="registerAgainBlock" Text="" Width="352" FontSize="32" Canvas.Left="49" Canvas.Top="259" />
+                <TextBlock Canvas.Left="11" Canvas.Top="-3" Height="52" Name="registerNameBlock" Text="register:" FontSize="26.667" Foreground="{StaticResource PhoneContrastForegroundBrush}"/>
+                <TextBox Canvas.Left="6" Canvas.Top="27" Height="78" Name="registerNameBox" VerticalAlignment="Center" Width="429" FontSize="32" ManipulationStarted="registerNameBox_ManipulationStarted" Foreground="{StaticResource PhoneContrastForegroundBrush}" BorderBrush="{StaticResource PhoneContrastForegroundBrush}" Background="{x:Null}" />
+                <Button Canvas.Left="255" Canvas.Top="111" Content="register" Height="78" Name="registerButton" VerticalAlignment="Center" Width="178" Click="registerButton_Click" FontSize="28" Foreground="{StaticResource PhoneContrastForegroundBrush}" BorderBrush="{StaticResource PhoneContrastForegroundBrush}" Background="{x:Null}"/>
+                <TextBlock Height="57" Name="registerAgainBlock" Text="" Width="352" FontSize="32" Canvas.Left="53" Canvas.Top="183" Foreground="{StaticResource PhoneContrastForegroundBrush}" />                
+                <!--Button Canvas.Left="271" Canvas.Top="97" Content="Album" Height="78" Name="choosePhotoButton" VerticalAlignment="Center" Width="178" Click="choosePhotoButton_Click" Foreground="{StaticResource PhoneContrastForegroundBrush}" BorderBrush="{StaticResource PhoneContrastForegroundBrush}" Background="{x:Null}" />
+                <Button Canvas.Left="271" Canvas.Top="169" Content="Take Photo" Height="78" Name="takePhotoButton" VerticalAlignment="Center" Width="178" Click="takePhotoButton_Click" Foreground="{StaticResource PhoneContrastForegroundBrush}" BorderBrush="{StaticResource PhoneContrastForegroundBrush}" Background="{x:Null}" />
                 <Canvas Canvas.Left="49" Canvas.Top="111" Height="133" Name="canvas1" Width="149" Background="#BFFFFFFF">
                     <Image Height="133" Name="userImage" Stretch="Fill" Width="149" />
-                </Canvas>
+                </Canvas-->
             </Canvas>
         </Grid>
     </Grid>
